--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "sendemail",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +17,4 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0"
   }
-
 }
